# text-to-3dgs-vibe

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustdoc-header.md  rustfmt.toml
.clinerules/: commands.json  instructions.json  ontology.json  preamble.human.md  preamble.md  signals.json
tools/text-to-3dgs/: Cargo.toml
tools/text-to-3dgs/src/: main.rs
tools/text-to-view/: Cargo.toml
tools/text-to-view/src/: main.rs
