[workspace]
exclude = [
  "tools/view-to-3dgs",
  "tools/brush",
]
members = [
  "tools/*",
]
resolver = "2"

[workspace.package]
authors = ["AsherJingkongChen"]
edition = "2021"
homepage = "https://github.com/AsherJingkongChen/Gausplat"
repository = "https://github.com/AsherJingkongChen/Gausplat"
rust-version = "1.83.0"
version = "0.0.0+alpha"

[workspace.dependencies]
# burn = {version = "0.17.1", default-features = false}
# burn-jit = {version = "0.17.1", default-features = false}
# burn-ndarray = {version = "0.17.1", default-features = false}
# burn-tensor = {version = "0.17.1", default-features = false}
burn = {git = "https://github.com/tracel-ai/burn", rev = "da8de562b0f67869c8a8c629b8535f938fd317f9", default-features = false}
burn-jit = {git = "https://github.com/tracel-ai/burn", rev = "da8de562b0f67869c8a8c629b8535f938fd317f9", default-features = false}
burn-ndarray = {git = "https://github.com/tracel-ai/burn", rev = "da8de562b0f67869c8a8c629b8535f938fd317f9", default-features = false}
burn-tensor = {git = "https://github.com/tracel-ai/burn", rev = "da8de562b0f67869c8a8c629b8535f938fd317f9", default-features = false}
bytemuck = {version = "1.21.0", default-features = false}
byteorder = {version = "1.5.0", default-features = false}
clap = {version = "4.5.23", default-features = false}
color-eyre = {version = "0.6.3", default-features = false}
dashmap = {version = "6.0.1", default-features = false}
derive_more = {version = "1.0.0", default-features = false}
divan = {version = "0.1.17", default-features = false}
globset = {version = "0.4.15", default-features = false}
humansize = {version = "2.1.3", default-features = false}
image = {version = "0.25.5", default-features = false}
indexmap = {version = "2.7.0", default-features = false}
kdam = {version = "0.6.2", default-features = false}
lazy_static = {version = "1.5.0", default-features = false}
log = {version = "0.4.22", default-features = false}
paste = {version = "1.0.15", default-features = false}
ply-rs = {version = "0.1.3", default-features = false}
pretty_env_logger = {version = "0.5.0", default-features = false}
rand = {version = "0.8.5", default-features = false}
rand_distr = {version = "0.4.3", default-features = false}
rayon = {version = "1.10.0", default-features = false}
serde = {version = "1.0.215", default-features = false}
serde_json = {version = "1.0.133", default-features = false}
thiserror = {version = "1.0.69", default-features = false}
walkdir = {version = "2.5.0", default-features = false}
winit = {version = "0.29", default-features = false}

[patch.crates-io]
wgpu = {git = "https://github.com/AsherJingkongChen/wgpu", rev = "b51332b93932155c32f42b43c71d3a4cf945559e"}

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
strip = true
