[workspace]
exclude = [
  "tools/view-to-3dgs",
  "tools/brush",
]
members = [
  "tools/*",
]
resolver = "2"

[workspace.package]
authors = ["AsherJingkongChen"]
edition = "2021"
homepage = "https://github.com/AsherJingkongChen/Gausplat"
repository = "https://github.com/AsherJingkongChen/Gausplat"
rust-version = "1.83.0"
version = "0.0.0+alpha"

[workspace.dependencies]
color-eyre = "0.6.3"
futures = "0.3.30"
glob = "0.3.1"
image = "0.25.6"
reqwest = { version = "0.12.20", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
video-rs = "0.10.3"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
strip = true
