[package]
name = "text-to-3dgs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
reqwest = { version = "0.12.20", features = ["json", "multipart", "stream"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
color-eyre = "0.6.3"
serde = { version = "1.0.203", features = ["derive"] }
glob = "0.3.1"
futures = "0.3.30"
