[package]
name = "text-to-3dgs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
glob = { workspace = true }
futures = { workspace = true }
