[package]
name = "text-to-view"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
video-rs = { workspace = true }
image = { workspace = true }
futures = { workspace = true }
